--- a/package.json
+++ b/package.json
@@ -7,24 +7,28 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:task-management-web": "node dist/task-management-web/server/server.mjs"
+    "serve:ssr:task-management-web": "node dist/task-management-web/server/server.mjs",
+    "tailwind": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^17.0.0",
+    "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
-    "@angular/material": "^17.0.0",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "@tailwindcss/postcss": "^4.1.12",
     "express": "^4.18.2",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
