--- a/package.json
+++ b/package.json
@@ -12,25 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^18.2.9",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^19.2.9",
-    "@angular/forms": "^18.2.0",
-    "@angular/material": "^18.2.9",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "@angular/ssr": "^18.2.9",
-    "@tailwindcss/postcss": "^4.1.12",
-    "express": "^4.18.2",
-    "postcss": "^8.5.6",
-    "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.12",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "19.2.9",
+  "@angular/cdk": "19.2.9",
+  "@angular/common": "19.2.9",
+  "@angular/compiler": "19.2.9",
+  "@angular/core": "19.2.9",
+  "@angular/forms": "19.2.9",
+  "@angular/material": "19.2.9",
+  "@angular/platform-browser": "19.2.9",
+  "@angular/platform-browser-dynamic": "19.2.9",
+  "@angular/platform-server": "19.2.9",
+  "@angular/router": "19.2.9",
+  "@angular/ssr": "19.2.9",
+  "rxjs": "~7.8.0",
+  "tslib": "^2.3.0",
+  "zone.js": "~0.15.0",
+  "express": "^4.18.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.9",
