--- a/package.json
+++ b/package.json
@@ -30,18 +30,25 @@
   "express": "^4.18.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
-    "@angular/cli": "^19.2.9",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "@angular-devkit/build-angular": "19.2.9",
+  "@angular/cli": "19.2.9",
+  "@angular/compiler-cli": "19.2.9",
+
+  "@types/express": "^4.17.17",
+  "@types/jasmine": "~5.1.0",
+  "@types/node": "^18.18.0",
+
+  "jasmine-core": "~5.2.0",
+  "karma": "~6.4.0",
+  "karma-chrome-launcher": "~3.2.0",
+  "karma-coverage": "~2.2.0",
+  "karma-jasmine": "~5.1.0",
+  "karma-jasmine-html-reporter": "~2.1.0",
+
+  "typescript": "~5.5.2",
+
+  "tailwindcss": "3.4.19",
+  "postcss": "^8.4.38",
+  "autoprefixer": "^10.4.19"
   }
 }
